--- a/test/dummysite.html
+++ b/test/dummysite.html
@@ -10,26 +10,34 @@
 </head>
 <body>
 
-<iframe name="bottomFrame">
 
 
-    <iframe name="mainFrame" id="mframe">
-        <form name="calendarForm" onsubmit="submit1()">
+<p>This example calls a function which performs a calculation, and returns the result:</p>
 
-        <select>
+<p id="demo"></p>
 
-            <option value="a">a</option>
-            <option value="PRAP">PRAP</option>
+<script>
+    var x = myFunction(4, 3);
 
-            <input type="submit">
+    function myFunction(a, b) {
+        return a * b;
+    }
+    function test(){
 
-        </select>
-</form>
+        var arr =  [0,1,2,3];
+        var num = 4;
 
-    </iframe>
-    </iframe>
+        for(var i =0; i < arr.length; i++){
+            if(arr[i] === num){
+                return "F";
+            }
+        }
+        console.log("Not found");
+        return 0;
+    }
 
-
+    document.getElementById("demo").innerHTML = test();
+</script>
 
 
 
